// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generates IDE Helper 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written eslint.config.mjs
Written prettier.config.mjs
",
}
`;

exports[`Generates IDE Helper 2`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

import { initialize } from "__PATH__/packages/crafty/src/index.js";
import { toESLintConfig } from "__PATH__/packages/crafty-preset-eslint/src/index.js";

const crafty = await initialize(process.argv, {
  "presets": [],
  "readConfig": true
});

const config = await toESLintConfig(crafty, {}, "ide");

export default config;
"
`;

exports[`Generates IDE Helper 3`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

/* global process */
import { initialize } from "@swissquote/crafty";

const crafty = await initialize(process.argv);

const config = crafty.config.prettier;
export default config;
"
`;

exports[`Lints JavaScript using command 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··"some·method"·\` with \`"some·method"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, explicit configuration 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··"some·method"·\` with \`"some·method"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, format preset 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:14  error  Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  14:9   error  Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:17  error  Replace \`··"some·method"·\` with \`"some·method"\`  @swissquote/swissquote/prettier/prettier
  18:11  error  Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier

✖ 10 problems (10 errors, 0 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, ignore crafty.config.js 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints-ignore-config/script.js
  2:3  error  Replace \`··let·oops·=··\` with \`let·oops·=·\`      @swissquote/swissquote/prettier/prettier
  2:9  error  'oops' is never reassigned. Use 'const' instead  prefer-const
  3:1  error  Delete \`··\`                                      @swissquote/swissquote/prettier/prettier

✖ 3 problems (3 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, legacy 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints-es5/js/script.js
  1:1   error  Use the function form of 'use strict'  strict
  1:14  error  Replace \`·(one,\` with \`(one,·\`         @swissquote/swissquote/prettier/prettier
  2:1   error  Delete \`·\`                             @swissquote/swissquote/prettier/prettier
  5:1   error  Use the function form of 'use strict'  strict
  5:23  error  Replace \`⏎\` with \`·\`                   @swissquote/swissquote/prettier/prettier
  7:12  error  Expected '===' and instead saw '=='    eqeqeq

✖ 6 problems (6 errors, 0 warnings)
  3 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Lints JavaScript using command, recommended preset 1`] = `
{
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

__PATH__/packages/integration-fixtures-cjs/fixtures/crafty-preset-babel/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··"some·method"·\` with \`"some·method"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 14 problems (12 errors, 2 warnings)
  10 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;
